<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:textSize="50sp"
        android:layout_margin="50dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_connection"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_margin="50dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"

            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="3dp"
                    android:hint="First Name"/>

                <EditText
                    android:id="@+id/lst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="3dp"
                    android:hint="Last Name"/>
            </LinearLayout>

            <EditText
                android:id="@+id/e_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/connection_btn"
                android:layout_marginTop="25dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textSize="16sp"
                android:text="@string/register"/>

            <Button
                android:id="@+id/register_to_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginTop="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:text="@string/login"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>